2018-12-31  Paul Eggert  <eggert@cs.ucla.edu>

	regex: improve Gnulib port to AIX
	From the glibc point of view, this removes duplicate macro
	definitions and is obviously safe.
	From the Gnulib point of view, this pacifies xlc 12.01 on AIX 7.1.
	* posix/regex_internal.h:
	(__attribute__, __attribute_warn_unused_result__):
	Remove; already defined elsewhere.

2018-12-31  Florian Weimer  <fw@deneb.enyo.de>

	[BZ #24027]
	* malloc/malloc.c (_int_realloc): Always call memcpy for the
	copying operation.  (ncopies had the wrong type, resulting in an
	integer wraparound and too few elements being copied.)

2018-12-31  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #24022]
	* sysdeps/unix/sysv/linux/riscv/flush-icache.c: Check if
	<asm/syscalls.h> exists with __has_include__ before including it.

2018-12-31  Joseph Myers  <joseph@codesourcery.com>

	* scripts/build-many-glibcs.py (Context.checkout): Default Linux
	version to 4.20.

2018-12-28  Justus Winter <4winter@informatik.uni-hamburg.de>

	* hurd/lookup-retry: Include <unistd.h>.
	(__hurd_file_name_lookup_retry): Keep a ref on last result in `lastdir'.
	Release it on return.  Handle "pid" magical lookup retry.

2018-12-28  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #10496]
	* localedata/locales/aa_DJ (t_fmt): Set to "%l:%M:%S %p".
	(t_fmt_ampm): Likewise.
	* localedata/locales/aa_ER (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.
	* localedata/locales/aa_ER@saaho (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.
	* localedata/locales/aa_ET (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.
	* localedata/locales/am_ET (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.
	* localedata/locales/byn_ER (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.
	* localedata/locales/om_ET (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.
	* localedata/locales/sid_ET (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.
	* localedata/locales/so_DJ (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.
	* localedata/locales/so_ET (t_fmt): Likewise.
	(t_fmt_ampm): Likewise.